Fix overflow bug and tool container re-size bug

--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ hr {
 
 #settings-container {
   height: 100%;
+  overflow: hidden;
   background:#f5f5f5;
   border-right: 1px solid lightgrey;
 }
